# TeleRust

./: Cargo.toml  Dockerfile  README.md  env.sample
kubernetes/: deployment.yaml
src/: main.rs
src/bot/: data.rs  mod.rs  watson.rs
