[package]
name = "telerust"
version = "0.1.0"
authors = ["JoaoPedroPP <jp052@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
dotenv = "0.15.0"
telegram-bot = "0.8.0"
env_logger = "0.7.1"
chrono = { version="0.4.19", features=["serde"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"]}
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1.0.117"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
